--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -9,11 +9,11 @@
 
 @import '~normalize.css';
 
-$font-fixedWidth: 'Source Code pro', monospace;
-$font-sansSerif: 'Noto Sans Thai', 'Noto Sans', sans-serif;
+// FontAwesome
+// In alias at webpack.config.js -> resolve.alias
+@import 'font-awesome.css';
 
-$fontsize-defaultSubTitle: 1.6rem;
-
+// Responsive screen size
 $screen-small: 786px;
 $screen-medium: 991px;
 $screen-large: 1200px;
@@ -21,21 +21,21 @@ $screen-large: 1200px;
 // Noto Sans
 @font-face {
   font-family: 'Noto Sans';
-  src: url('../../../static/fonts/NotoSans-Regular.ttf') format('truetype'); 
+  src: url('NotoSans-Regular.ttf') format('truetype'); 
 }
 @font-face {
   font-family: 'Noto Sans';
-  src: url('../../../static/fonts/NotoSans-Bold.ttf') format('truetype');
+  src: url('NotoSans-Bold.ttf') format('truetype');
   font-weight: 700;  
 }
 @font-face {
   font-family: 'Noto Sans';
-  src: url('../../../static/fonts/NotoSans-Italic.ttf') format('truetype');
+  src: url('NotoSans-Italic.ttf') format('truetype');
   font-style: italic; 
 }
 @font-face {
   font-family: 'Noto Sans';
-  src: url('../../../static/fonts/NotoSans-BoldItalic.ttf') format('truetype');
+  src: url('NotoSans-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic; 
 }
@@ -43,13 +43,16 @@ $screen-large: 1200px;
 // Noto Sans Thai
 @font-face {
   font-family: 'Noto Sans Thai';
-  src: url('../../../static/fonts/NotoSansThai-Regular.ttf') format('truetype'); 
+  src: url('NotoSansThai-Regular.ttf') format('truetype'); 
 }
 @font-face {
   font-family: 'Noto Sans Thai';
-  src: url('../../../static/fonts/NotoSansThai-Bold.ttf') format('truetype');  
+  src: url('NotoSansThai-Bold.ttf') format('truetype');  
   font-weight: 700;
 }
+
+$font-fixed-width: 'Source Code pro', monospace;
+$font-sans-serif: 'Noto Sans Thai', 'Noto Sans', sans-serif;
 
 ._left { text-align: left!important; }
 ._right { text-align: right!important; }
@@ -73,17 +76,13 @@ $screen-large: 1200px;
 
 html, body {
   background: #f9f9f9;
-  font-family: 'Noto Sans Thai', 'Noto Sans', sans-serif;
+  font-family: $font-sans-serif;
   font-size: 62.5%;
 }
 
 a, a:active, a:hover, a:visited {
   color: inherit;
   text-decoration: none;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'RSU', sans-serif;
 }
 
 b, strong {
