--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -1,5 +1,5 @@
-// stylesheets/components/Footer.scss
-// ----------------------------------
+// stylesheets/Footer.scss
+// -----------------------
 //
 // @author  Natcha Luang - Aroonchai <me@nomkhonwaan.com>
 // @created May 8, 2016
