--- a/src/stylesheets/Nav.scss
+++ b/src/stylesheets/Nav.scss
@@ -1,5 +1,5 @@
-// stylesheets/components/Nav.scss
-// -------------------------------
+// stylesheets/Nav.scss
+// --------------------
 //
 // @author  Natcha Luang - Aroonchai <me@nomkhonwaan.com>
 // @created May 6, 2016
