--- a/src/stylesheets/Nav.scss
+++ b/src/stylesheets/Nav.scss
@@ -7,12 +7,12 @@
 
 @charset 'UTF-8';
 
-@import './_base';
+@import './main';
 
 .layout-nav {
   @extend .container;
   
-  @media (max-width: $screen-small) {
+  @include breakpoint(max-width $sm) {
     background: #fff;
     border-bottom: 1px solid #ececec;
     position: fixed;
@@ -22,7 +22,7 @@
     z-index: 99;
   }
   
-  @media (min-width: $screen-medium) {
+  @include breakpoint($md) {
     align-items: center;
     background: #78909c;
     display: flex;
@@ -34,7 +34,7 @@
   .menu-list {
     display: block;
     
-    @media (max-width: $screen-small) {
+    @include breakpoint(max-width $sm) {
       background: #fff;
       border-top: 1px solid #ececec;
       border-right: 1px solid #ececec;
@@ -56,7 +56,7 @@
     > .menu-item {
       display: block;
       
-      @media (min-width: $screen-medium) {
+      @include breakpoint($md) {
         display: inline-block;
       }
       
@@ -66,12 +66,14 @@
         display: block;
         font-size: 1.1rem;
         line-height: initial;
-        padding: 12px;
+        padding: 12px 18px;
         transition: all .2s ease-in-out;
         
-        @media (min-width: $screen-medium) {
+        @include breakpoint($md) {
           color: #f2f2f2;
           display: inline-block;
+          font-size: 1.3rem;
+          padding: 12px;
         }
         
         &:hover,
@@ -93,13 +95,12 @@
     margin: 12px;
     text-transform: uppercase;
     transition: background .2s ease-in-out;
-    width: 48px;
     
     &:hover {
       background: #f9f9f9;
     }
     
-    @media (min-width: $screen-medium) {
+    @include breakpoint($md) {
       display: none;
     }
   }
